--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@popperjs/core": "^2.9.2",
     "aos": "^3.0.0-beta.6",
     "axios": "^0.21.1",
+    "chart.js": "^3.5.1",
     "compressorjs": "^1.0.7",
     "core-js": "^3.12.0",
     "decimal.js": "^10.3.1",
@@ -31,6 +32,7 @@
     "v-calendar": "^2.3.0",
     "vue": "^2.6.14",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-chartjs": "^3.5.1",
     "vue-clickaway": "^2.2.2",
     "vue-clipboard2": "^0.3.1",
     "vue-infinite-scroll": "^2.0.2",
