--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "aos": "^3.0.0-beta.6",
+    "apexcharts": "^3.29.0",
     "axios": "^0.21.1",
     "chart.js": "^3.5.1",
     "compressorjs": "^1.0.7",
@@ -31,6 +32,7 @@
     "swiper": "5.4.5",
     "v-calendar": "^2.3.0",
     "vue": "^2.6.14",
+    "vue-apexcharts": "^1.6.2",
     "vue-awesome-swiper": "^4.1.1",
     "vue-chartjs": "^3.5.1",
     "vue-clickaway": "^2.2.2",
